--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Luma Health - It's About Time</title>
-	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,900,600,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
