--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
 		
 		<section class="countown_style_1 fadeOutUp" id="countdown_block">
 		
-			<h3 id="site_subheading">Filling appointments. Simplifying your day.</h3>
-			<h1 id="site_slogan">
-				Sign up for Luma and start filling appointments today.
+<!-- 			<h3 id="site_subheading">Filling appointments. Simplifying your day.</h3>
+ -->			<h1 id="site_slogan" style="size: 7%">
+				Sign up for Luma Health and start filling appointments today.
 			</h1>
 
 			<div class="section_content">
@@ -132,16 +132,16 @@
 				<div class="scroll_container">
 					<h2 class="section_title anims">Contacts</h2>
 					<div class="section_subtitle anims">
-						Let's make something awesome together<br>Drop us a line, or give us a heads up if you’re interested in visiting us.
+						We're a quick email away.
 					</div>
 					<div class="section_content">
 							<div class="anims">
 								<h3>Get In Touch</h3>
-								<p>If you have any questions, comments or suggestions, we would love to hear from you. Please get in touch at any time and we'll get back to you within 24 hours.</p>
+								<p>Interested in learning more about Luma Health or piloting it in your own clinical environmental? Contact us to set up a demo and see how Luma Health can increase your practice's revenue and drive your patient satisfaction.</p>
 								<ul id="contacts_list">
 									<li class="anims">
 										<span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-										<a href="mailto:sales@lumahealth.io">sales@lumahealth.io</a>
+										<a href="mailto:info@lumahealth.io">info@lumahealth.io</a>
 									</li>
 								</ul>
 							</div>
@@ -177,7 +177,7 @@
 			<ul id="contacts_list">
 				<li class="anims">
 					<span class="contacts_icon"><img src="images/contacts_icon3_black.png" alt=""></span>
-					<a href="mailto:sales@lumahealth.io" style="color: #000">sales@lumahealth.io</a>
+					<a href="mailto:info@lumahealth.io" style="color: #000">info@lumahealth.io</a>
 				</li>
 			</ul>
 			<div id="copyright">
@@ -186,14 +186,17 @@
 		</div>
 	</section>
 	
-	<div id="single_color_bg" class="pattern_overlay"></div>
-	
+		<div id="single_img_bg" class="pattern_overlay image6"></div>
+
+<!-- 	<div id="site_video_bg" class="local"></div>
+ -->	
 	<!-- /Site Header -->
 	<script src="js/jquery-1.11.2.min.js"></script>
-<!-- 	<script src="js/jquery.mCustomScrollbar.min.js"></script> -->
 	<script src="js/jquery.plugin.min.js"></script>
 	<script src="js/jquery.countdown.min.js"></script>
 	<script src="js/jquery.sm-text-rotator.js"></script>
+		<script src="js/jquery.vide.js"></script>
+
 	<script src="js/_config.js"></script>
 	<script src="js/_front.js"></script>
 </body>
