--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		<!-- Site Header -->
 		<header id="header">
 			<div id="site_logo">
-				<h1><a href="#"><img src="images/lumalogo.gif" title='Luma Health' alt=""></a></h1>
+				<h1><a href="#"><img style="position:fixed; left: 0px; top: 0px" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
 			</div>
 		</header>
 	
@@ -29,10 +29,10 @@
 		
 		<section class="countown_style_1 fadeOutUp" id="countdown_block">
 		
-<!-- 			<h3 id="site_subheading">Filling appointments. Simplifying your day.</h3>
- -->			<h1 id="site_slogan" style="size: 7%">
-				Sign up for Luma Health and start filling appointments today.
+			<h1 id="site_slogan" style="text-transform: none">
+				Luma Health fills your practices cancellations today.
 			</h1>
+			<h3 style="padding: 22px; text-transform: none">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and icnrease patient satisfaction.</h3>
 
 			<div class="section_content">
 				<div class="row services_block">
@@ -44,12 +44,12 @@
 					<div class="col-xs-4 ">
 						<div class="service_icon"><img src="images/services_icon_2.png" alt=""></div>
 						<h3>IMPROVE PRODUCTIVITY</h3>
-						<p>No more wasting time. Luma Health does it all automatically. Scheduling staff loves it.</p>
+						<p>Patients get rescheduled automatically. Scheduling staff loves it.</p>
 					</div>
 					<div class="col-xs-4 ">
 						<div class="service_icon"><img src="images/services_icon_3.png" alt=""></div>
 						<h3>MORE SMILES</h3>
-						<p>See patients sooner. Healthy patients are happy patients.</p>
+						<p>See patients see doctors sooner. Healthy patients are happy patients.</p>
 					</div>
 				</div>
 			</div>
@@ -152,12 +152,8 @@
 		</section>
 	
 		<footer id="site_footer">
-			<ul class="social_links"><!-- 
-			 --><li><a href="#"><i class="icon-social_twitter_square"></i></a></li><!-- 
-			 --><li><a href="#"><i class="icon-social_facebook_square"></i></a></li><!-- 
-			 --><li><a href="#"><i class="icon-social_dribbble_square"></i></a></li><!-- 
-			 --><li><a href="#"><i class="icon-social_instagram_square"></i></a></li><!-- 
-			 --><li><a href="#"><i class="icon-social_pinterest_square"></i></a></li>
+			<ul class="social_links">
+				<li><a href="https://twitter.com/lumahealthhq"><i class="icon-social_twitter_square"></i></a></li>
 			</ul>
 		</footer>
 	
