--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Luma Health - It's About Time</title>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
@@ -32,7 +33,7 @@
 			<h1 id="site_slogan" style="text-transform: none">
 				Luma Health fills your practices cancellations today.
 			</h1>
-			<h3 style="padding: 22px; text-transform: none">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and icnrease patient satisfaction.</h3>
+			<h3 style="padding: 22px; text-transform: none">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</h3>
 
 			<div class="section_content">
 				<div class="row services_block">
@@ -61,8 +62,8 @@
 			<!-- Section About -->
 			<div id="about" class="part_content jspScrollable">
 				<div class="scroll_container">
-					<h2 class="section_title anims">About</h2>
-					<div class="section_subtitle anims">
+					<h2 class="section_title anims">About Luma Helath</h2>
+					<div class="section_subtitle anims" style="text-transform: none; font-size: 18px">
 						Our vision is to simplify the appointment scheduling process for healthcare providers, healthcare staff and patients.
 					</div>
 					<div class="section_content">
