--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 		<section class="countown_style_1 fadeOutUp" id="countdown_block">
 		
 			<h1 id="site_slogan" style="text-transform: none">
-				Luma Health fills your practices cancellations today.
+				Fill your practices' cancellations today.
 			</h1>
 			<h3 style="padding: 22px; text-transform: none">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</h3>
 
@@ -57,7 +57,6 @@
 
 		</section>
 	
-		<section id="site_content">
 		
 			<!-- Section About -->
 			<div id="about" class="part_content jspScrollable">
@@ -150,7 +149,6 @@
 				</div>
 			</div>
 		
-		</section>
 	
 		<footer id="site_footer">
 			<ul class="social_links">
