--- a/public/index.html
+++ b/public/index.html
@@ -4,37 +4,71 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Luma Health - It's About Time</title>
-	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
-	<link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
-<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type='text/css'>
- -->	<link rel="stylesheet" href="css/style.css" type='text/css'>
+	<link rel="stylesheet" href="css/style.css" type='text/css'>
 	<link rel="stylesheet" href="css/responsive.css" type='text/css'>
 </head>
 <body class="style_5">
 		
-	<div id="menu_button"><a href="#"></a></div>
+	<!-- <div id="menu_button"><a href="#"></a></div> -->
 
-	<div id="primary">
-		
+	<div id="primary" style="padding-right: 15px; padding-left: 15px; margin-top: 95px">
 		<!-- Site Header -->
 		<header id="header">
 			<div id="site_logo">
-				<h1><a href="#"><img style="position:fixed; left: 0px; top: 0px" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
+				<h1><a href="http://www.lumahealth.io"><img style="position:fixed; left: 0px; top: 0px" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
 			</div>
 		</header>
 	
 		<!-- home -->
 		
-		<section class="countown_style_1 fadeOutUp" id="countdown_block">
+		<section style="margin-top:65px">
 		
-			<h1 id="site_slogan" style="text-transform: none">
+			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 125px">
 				Fill your practices' cancellations today.
 			</h1>
-			<h3 style="padding: 22px; text-transform: none">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</h3>
+			<div>
+				<div class="row">
+					<div class="col-xs-6">
+						<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</p>
+					</div>
+					<div class="col-xs-6">
+						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px">Interested in joining the beta? Sign up now and we'll be in touch.</p>
+						<div>
+						<form action="signup" style="padding: 22px" method="POST">
+							<div class="form-group">
+								<label for="name">Name</label>
+								<input class="form-control" type="text" name="name"/ placeholder="Enter your name">
+							</div>
+							<div class="form-group">
+								<label for="email" >Email</label>
+								<input class="form-control" type="text" name="email" placeholder="email@example.com">
+							</div>
+							<div class="form-group">
+								<label for="org">Organization</label>
+								<input class="form-control" type="text" name="org"/>
+							</div>
+							<div class="form-inline">
+								<label for="role">Role</label>
+									<select class="form-control" name="role">
+										<option value="physician">Physician</option>
+										<option value="practice_manager">Practice Manager</option>
+										<option value="office_manager">Office Manager</option>
+										<option value="scheduler">Scheduler</option>
+										<option value="operations_team">Operations Team</option>
+										<option value="other">Other</option>
+									</select>
+								<button type="submit" class="btn btn-default"/>Submit</button>
+							</div>
 
+						</form>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
 			<div class="section_content">
 				<div class="row services_block">
 					<div class="col-xs-4">
@@ -57,44 +91,43 @@
 
 		</section>
 	
-		
-			<!-- Section About -->
-			<div id="about" class="part_content jspScrollable">
-				<div class="scroll_container">
-					<h2 class="section_title anims">About Luma Helath</h2>
-					<div class="section_subtitle anims" style="text-transform: none; font-size: 18px">
-						Our vision is to simplify the appointment scheduling process for healthcare providers, healthcare staff and patients.
-					</div>
-					<div class="section_content">
-						<div class="row">
-							<div class="col-sm-6 anims">
-								<h3>APPOINTMENT REMINDERS</h3>
-								<p>Email, text, or a phone call goes to patients prior to appointment.</p>
-							</div>
-							<div class="col-sm-6 anims">
-								<h3>PRE-VISIT INSTRUCTION</h3>
-								<p>Patients get forms and other information they need beforehand to save time.</p>
-							</div>
-							<div class="col-sm-6 anims">
-								<h3>FEE ESTIMATE</h3>
-								<p>Patients get to know any possible costs and co-pays ahead of time. How convenient!</p>
-							</div>
-							<div class="col-sm-6 anims">
-								<h3>FILL APPOINTMENTS</h3>
-								<p>Canceled appointments trigger your waitlist to automatically contact patients in need of an appointment.</p>
-							</div>
-							<div class="col-sm-6 anims">
-								<h3>POST-VISIT CARE &amp; FEEDBACK</h3>
-								<p>An email or text is sent after the appointment with instructions for care.</p>
-							</div>
-							<div class="col-sm-6 anims">
-								<h3>POST-VISIT FEEDBACK</h3>
-								<p>Get valuable, real-time, actionable feedback from your patients.</p>
-							</div>
+		<!-- Section About -->
+		<div id="about" class="jspScrollable">
+			<div class="scroll_container">
+				<h2 class="section_title anims">About Luma Helath</h2>
+				<div class="section_subtitle anims" style="text-transform: none; font-size: 18px">
+					Our vision is to simplify the appointment scheduling process for healthcare providers, healthcare staff and patients.
+				</div>
+				<div class="section_content" style="margin-top: 10px">
+					<div class="row">
+						<div class="col-sm-6 anims">
+							<h3>APPOINTMENT REMINDERS</h3>
+							<p>Email, text, or a phone call goes to patients prior to appointment.</p>
+						</div>
+						<div class="col-sm-6 anims">
+							<h3>PRE-VISIT INSTRUCTION</h3>
+							<p>Patients get forms and other information they need beforehand to save time.</p>
+						</div>
+						<div class="col-sm-6 anims">
+							<h3>FEE ESTIMATE</h3>
+							<p>Patients get to know any possible costs and co-pays ahead of time. How convenient!</p>
+						</div>
+						<div class="col-sm-6 anims">
+							<h3>FILL APPOINTMENTS</h3>
+							<p>Canceled appointments trigger your waitlist to automatically contact patients in need of an appointment.</p>
+						</div>
+						<div class="col-sm-6 anims">
+							<h3>POST-VISIT CARE &amp; FEEDBACK</h3>
+							<p>An email or text is sent after the appointment with instructions for care.</p>
+						</div>
+						<div class="col-sm-6 anims">
+							<h3>POST-VISIT FEEDBACK</h3>
+							<p>Get valuable, real-time, actionable feedback from your patients.</p>
 						</div>
 					</div>
-				</div>		
-			</div>
+				</div>
+			</div>		
+		</div>
 
 
 			<!-- Learn More -->
@@ -196,3 +229,7 @@
 	<script src="js/_front.js"></script>
 </body>
 </html>
+
+
+
+
