--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" href="css/style.css" type='text/css'>
 	<link rel="stylesheet" href="css/responsive.css" type='text/css'>
 </head>
-<body class="style_5">
+<body class="style_5" style="padding: 50px">
 		
 	<!-- <div id="menu_button"><a href="#"></a></div> -->
 
-	<div id="primary" style="padding-right: 15px; padding-left: 15px; margin-top: 95px">
+	<div id="primary" style="padding-right: 15px; padding-left: 15px">
 		<!-- Site Header -->
 		<header id="header">
 			<div id="site_logo">
@@ -25,7 +25,7 @@
 		
 		<section style="margin-top:65px">
 		
-			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 125px">
+			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 75px">
 				Fill your practices' cancellations today.
 			</h1>
 			<div>
@@ -38,19 +38,19 @@
 						<div>
 						<form action="signup" style="padding: 22px" method="POST">
 							<div class="form-group">
-								<label for="name">Name</label>
-								<input class="form-control" type="text" name="name"/ placeholder="Enter your name">
+								<label for="name" >Name</label>
+								<input class="form-control" type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
 							</div>
 							<div class="form-group">
 								<label for="email" >Email</label>
-								<input class="form-control" type="text" name="email" placeholder="email@example.com">
+								<input class="form-control" type="text" name="email" placeholder="email@example.com" style="width: 75%">
 							</div>
 							<div class="form-group">
 								<label for="org">Organization</label>
-								<input class="form-control" type="text" name="org"/>
+								<input class="form-control" type="text" name="org" style="width: 75%"/>
 							</div>
 							<div class="form-inline">
-								<label for="role">Role</label>
+								<label for="role" style="width: 75%">Role</label>
 									<select class="form-control" name="role">
 										<option value="physician">Physician</option>
 										<option value="practice_manager">Practice Manager</option>
@@ -187,6 +187,10 @@
 			<ul class="social_links">
 				<li><a href="https://twitter.com/lumahealthhq"><i class="icon-social_twitter_square"></i></a></li>
 			</ul>
+			<div>
+				<p style="text-align:center; margin-top: 125px">Copyright &copy; 2015 Luma Health, Inc.</p>
+			</div>
+
 		</footer>
 	
 	</div>
@@ -208,11 +212,9 @@
 					<a href="mailto:info@lumahealth.io" style="color: #000">info@lumahealth.io</a>
 				</li>
 			</ul>
-			<div id="copyright">
-				<p>Copyright &copy; 2015 Luma Health, Inc.</p>
-			</div>
 		</div>
 	</section>
+
 	
 		<div id="single_img_bg" class="pattern_overlay image6"></div>
 
