--- a/public/index.html
+++ b/public/index.html
@@ -32,63 +32,60 @@
 				<div class="row">
 					<div class="col-xs-6">
 						<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</p>
+						<div class="section_content">
+							<div class="row services_block">
+								<div class="col-xs-4">
+									<div class="service_icon"><img src="images/dollar.png" alt=""></div>
+									<h3>SAVE MONEY</h3>
+									<p>More filled appointments means more revenue.</p>
+								</div>
+								<div class="col-xs-4 ">
+									<div class="service_icon"><img src="images/time.png" alt=""></div>
+									<h3>IMPROVE PRODUCTIVITY</h3>
+									<p>Patients get rescheduled automatically. Scheduling staff loves it.</p>
+								</div>
+								<div class="col-xs-4 ">
+									<div class="service_icon"><img src="images/smile.png" alt=""></div>
+									<h3>MORE SMILES</h3>
+									<p>See patients see doctors sooner. Healthy patients are happy patients.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-xs-6">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px">Interested in joining the beta? Sign up now and we'll be in touch.</p>
 						<div>
-						<form action="signup" style="padding: 22px" method="POST">
-							<div class="form-group">
-								<label for="name" >Name</label>
-								<input class="form-control" type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
-							</div>
-							<div class="form-group">
-								<label for="email" >Email</label>
-								<input class="form-control" type="text" name="email" placeholder="email@example.com" style="width: 75%">
-							</div>
-							<div class="form-group">
-								<label for="org">Organization</label>
-								<input class="form-control" type="text" name="org" style="width: 75%"/>
-							</div>
-							<div class="form-inline">
-								<label for="role" style="width: 75%">Role</label>
-									<select class="form-control" name="role">
-										<option value="physician">Physician</option>
-										<option value="practice_manager">Practice Manager</option>
-										<option value="office_manager">Office Manager</option>
-										<option value="scheduler">Scheduler</option>
-										<option value="operations_team">Operations Team</option>
-										<option value="other">Other</option>
-									</select>
-								<button type="submit" class="btn btn-default"/>Submit</button>
-							</div>
-
-						</form>
+							<form action="signup" style="padding: 22px" method="POST">
+								<div class="form-group">
+									<label for="name" >Name</label>
+									<input class="form-control" type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
+								</div>
+								<div class="form-group">
+									<label for="email" >Email</label>
+									<input class="form-control" type="text" name="email" placeholder="email@example.com" style="width: 75%">
+								</div>
+								<div class="form-group">
+									<label for="org">Organization</label>
+									<input class="form-control" type="text" name="org" style="width: 75%"/>
+								</div>
+								<div class="form-inline">
+									<label for="role" style="width: 75%">Role</label>
+										<select class="form-control" name="role">
+											<option value="physician">Physician</option>
+											<option value="practice_manager">Practice Manager</option>
+											<option value="office_manager">Office Manager</option>
+											<option value="scheduler">Scheduler</option>
+											<option value="operations_team">Operations Team</option>
+											<option value="other">Other</option>
+										</select>
+									<button type="submit" class="btn btn-default"/>Submit</button>
+									<p style="font-size: 12px; font-style: italic;">We'll only use your email to follow up with you.</p>
+								</div>
+							</form>
 						</div>
-
-					</div>
-
-				</div>
-			</div>
-			<div class="section_content">
-				<div class="row services_block">
-					<div class="col-xs-4">
-						<div class="service_icon"><img src="images/services_icon_1.png" alt=""></div>
-						<h3>SAVE MONEY</h3>
-						<p>More filled appointments means more revenue.</p>
-					</div>
-					<div class="col-xs-4 ">
-						<div class="service_icon"><img src="images/services_icon_2.png" alt=""></div>
-						<h3>IMPROVE PRODUCTIVITY</h3>
-						<p>Patients get rescheduled automatically. Scheduling staff loves it.</p>
-					</div>
-					<div class="col-xs-4 ">
-						<div class="service_icon"><img src="images/services_icon_3.png" alt=""></div>
-						<h3>MORE SMILES</h3>
-						<p>See patients see doctors sooner. Healthy patients are happy patients.</p>
 					</div>
 				</div>
 			</div>
-
 		</section>
 	
 		<!-- Section About -->
@@ -182,13 +179,14 @@
 				</div>
 			</div>
 		
-	
+		<p style="text-align:center;">Copyright &copy; 2015 Luma Health, Inc. All Rights Reserved.</p>
+			
 		<footer id="site_footer">
 			<ul class="social_links">
 				<li><a href="https://twitter.com/lumahealthhq"><i class="icon-social_twitter_square"></i></a></li>
 			</ul>
 			<div>
-				<p style="text-align:center; margin-top: 125px">Copyright &copy; 2015 Luma Health, Inc.</p>
+
 			</div>
 
 		</footer>
