--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 	<div id="primary" style="padding-right: 15px; padding-left: 15px">
 		<!-- Site Header -->
-		<header id="header">
+		<header id="header" style="">
 			<div id="site_logo">
 				<h1><a href="http://www.lumahealth.io"><img style="position:fixed; left: 0px; top: 0px" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
 			</div>
@@ -75,6 +75,8 @@
 											<option value="practice_manager">Practice Manager</option>
 											<option value="office_manager">Office Manager</option>
 											<option value="scheduler">Scheduler</option>
+											<option value="nurse">Nurse</option>
+											<option value="physicans_assistant">Physician's Assistant</option>
 											<option value="operations_team">Operations Team</option>
 											<option value="other">Other</option>
 										</select>
