--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,11 @@
 							<form action="signup" style="padding: 22px" method="POST">
 								<div class="form-group">
 									<label for="name" >Name</label>
-									<input class="form-control" type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
+									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
 								</div>
 								<div class="form-group">
 									<label for="email" >Email</label>
-									<input class="form-control" type="text" name="email" placeholder="email@example.com" style="width: 75%">
+									<input class="form-control" required type="text" name="email" placeholder="email@example.com" style="width: 75%">
 								</div>
 								<div class="form-group">
 									<label for="org">Organization</label>
