--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 		<section style="margin-top:65px">
 		
 			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 75px">
-				Fill your practices' cancellations today.
+				Luma Health helps healthcare providers match patients to unfilled appointments.	
 			</h1>
 			<div>
 				<div class="row">
@@ -36,13 +36,13 @@
 							<div class="row services_block">
 								<div class="col-xs-4">
 									<div class="service_icon"><img src="images/dollar.png" alt=""></div>
-									<h3>SAVE MONEY</h3>
+									<h3>Increase Revenue</h3>
 									<p>More filled appointments means more revenue.</p>
 								</div>
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/time.png" alt=""></div>
 									<h3>IMPROVE PRODUCTIVITY</h3>
-									<p>Patients get rescheduled automatically. Scheduling staff loves it.</p>
+									<p>Automate and simplify time-consuming, manual workarounds.  Scheduling staff loves it.</p>
 								</div>
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/smile.png" alt=""></div>
