--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/smile.png" alt=""></div>
 									<h3>MORE SMILES</h3>
-									<p>See patients see doctors sooner. Healthy patients are happy patients.</p>
+									<p>Help patients sooner. Healthy patients are happy patients.</p>
 								</div>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 							<div class="col-xs-4 anims">
 								<div class="service_icon"><img src="images/services_icon_3.png" alt=""></div>
 								<h3>MORE SMILES</h3>
-								<p>See patients sooner. Healthy patients are happy patients.</p>
+								<p>Help patients sooner. Healthy patients are happy patients.</p>
 							</div>
 						</div>
 					</div>
