--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
 		<section style="margin-top:65px">
 		
 			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 75px">
-				Luma Health helps healthcare providers match patients to unfilled appointments.	
+				Fill cancelled appointments today.	
 			</h1>
+			<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px; text-align: center">Luma Health helps health care providers match patients to unfilled appointments.</p>
 			<div>
 				<div class="row">
-					<div class="col-xs-6">
-						<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px">Leading medical practices use Luma Health to fill their appointment book, maximize revenue, and increase patient satisfaction.</p>
+					<div class="col-xs-12">
 						<div class="section_content">
 							<div class="row services_block">
 								<div class="col-xs-4">
@@ -52,7 +52,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-12">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px">Interested in joining the beta? Sign up now and we'll be in touch.</p>
 						<div>
 							<form action="signup" style="padding: 22px" method="POST">
