--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12">
-						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px">Interested in joining the beta? Sign up now and we'll be in touch.</p>
+						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px; text-align: center">Interested in learning more?<br>Sign up now and we'll be in touch.</p>
 						<div>
 							<form action="signup" style="padding: 22px" method="POST">
 								<div class="form-group">
