--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/time.png" alt=""></div>
 									<h3>IMPROVE PRODUCTIVITY</h3>
-									<p>Automate and simplify time-consuming, manual workarounds.  Scheduling staff loves it.</p>
+									<p>Automate time-consuming, manual workarounds. Scheduling staff loves it.</p>
 								</div>
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/smile.png" alt=""></div>
@@ -55,7 +55,7 @@
 					<div class="col-xs-12">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px; text-align: center">Interested in learning more?<br>Sign up now and we'll be in touch.</p>
 						<div>
-							<form action="signup" style="padding: 22px" method="POST">
+							<form action="signup" style="padding: 22px" class="form-horizontal" method="POST">
 								<div class="form-group">
 									<label for="name" >Name</label>
 									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 75%">
@@ -68,9 +68,9 @@
 									<label for="org">Organization</label>
 									<input class="form-control" type="text" name="org" style="width: 75%"/>
 								</div>
-								<div class="form-inline">
-									<label for="role" style="width: 75%">Role</label>
-										<select class="form-control" name="role">
+								<div class="form-group">
+									<label for="role" >Role</label>
+										<select class="form-control" style="width: 75%" name="role">
 											<option value="physician">Physician</option>
 											<option value="practice_manager">Practice Manager</option>
 											<option value="office_manager">Office Manager</option>
@@ -80,7 +80,7 @@
 											<option value="operations_team">Operations Team</option>
 											<option value="other">Other</option>
 										</select>
-									<button type="submit" class="btn btn-default"/>Submit</button>
+									<button style="margin-top: 10px" type="submit" class="btn btn-default"/>Submit</button>
 									<p style="font-size: 12px; font-style: italic;">We'll only use your email to follow up with you.</p>
 								</div>
 							</form>
@@ -146,7 +146,7 @@
 							<div class="col-xs-4 anims">
 								<div class="service_icon"><img src="images/services_icon_2.png" alt=""></div>
 								<h3>IMPROVE PRODUCTIVITY</h3>
-								<p>No more wasting time. Luma Health does it all automatically. Scheduling staff loves it.</p>
+								<p>No more wasting time. Luma Health does it all automatically.</p>
 							</div>
 							<div class="col-xs-4 anims">
 								<div class="service_icon"><img src="images/services_icon_3.png" alt=""></div>
