--- a/public/index.html
+++ b/public/index.html
@@ -54,23 +54,23 @@
 					</div>
 					<div class="col-xs-12">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px; text-align: center">Interested in learning more?<br>Sign up now and we'll be in touch.</p>
-						<div>
+						<div style="margin-left: auto; margin-right: auto; width: 50%">
 							<form action="signup" style="padding: 22px" class="form-horizontal" method="POST">
 								<div class="form-group">
 									<label for="name" >Name</label>
-									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 45%">
+									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 60%">
 								</div>
 								<div class="form-group">
 									<label for="email" >Email</label>
-									<input class="form-control" required type="text" name="email" placeholder="email@example.com" style="width: 45%">
+									<input class="form-control" required type="text" name="email" placeholder="email@example.com" style="width: 60%">
 								</div>
 								<div class="form-group">
 									<label for="org">Organization</label>
-									<input class="form-control" type="text" name="org" style="width: 45%"/>
+									<input class="form-control" type="text" name="org" style="width: 60%"/>
 								</div>
 								<div class="form-group">
 									<label for="role" >Role</label>
-										<select class="form-control" style="width: 45%" name="role">
+										<select class="form-control" style="width: 60%" name="role">
 											<option value="physician">Physician</option>
 											<option value="practice_manager">Practice Manager</option>
 											<option value="office_manager">Office Manager</option>
