--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 			<h1 id="site_slogan" style="text-align: center; font-size:66px; text-shadow: 5px 5px 5px rgba(0,0,0,.27); margin-top: 75px">
 				Fill cancelled appointments today.	
 			</h1>
-			<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px; text-align: center">Luma Health helps health care providers match patients to unfilled appointments.</p>
+			<p style="padding-top: 22px; padding-right: 22px; text-transform: none; font-size: 34px; line-height: 38px; text-align: center">Luma Health helps healthcare providers match patients to unfilled appointments.</p>
 			<div>
 				<div class="row">
 					<div class="col-xs-12">
@@ -47,7 +47,7 @@
 								<div class="col-xs-4 ">
 									<div class="service_icon"><img src="images/smile.png" alt=""></div>
 									<h3>MORE SMILES</h3>
-									<p>Help patients sooner. Healthy patients are happy patients.</p>
+									<p>See patients sooner. Healthy patients are happy patients.</p>
 								</div>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 							<div class="col-xs-4 anims">
 								<div class="service_icon"><img src="images/services_icon_3.png" alt=""></div>
 								<h3>MORE SMILES</h3>
-								<p>Help patients sooner. Healthy patients are happy patients.</p>
+								<p>See patients sooner. Healthy patients are happy patients.</p>
 							</div>
 						</div>
 					</div>
