logo scroll fixed

--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 	<link rel="stylesheet" href="css/responsive.css" type='text/css'>
 </head>
 <body class="style_5" style="padding: 50px">
+	<div id="site_logo">
+		<h1><a href="http://www.lumahealth.io"><img style="margin-top: -45px; margin-left: -45px;" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
+	</div>
 		
 	<!-- <div id="menu_button"><a href="#"></a></div> -->
 
 	<div id="primary" style="padding-right: 15px; padding-left: 15px">
 		<!-- Site Header -->
 		<header id="header" style="">
-			<div id="site_logo">
-				<h1><a href="http://www.lumahealth.io"><img style="position:fixed; left: 0px; top: 0px" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
-			</div>
 		</header>
 	
 		<!-- home -->
