--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,19 @@
 	<link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
 	<link rel="stylesheet" href="css/style.css" type='text/css'>
 	<link rel="stylesheet" href="css/responsive.css" type='text/css'>
+	<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body class="style_5" style="padding: 50px">
 	<div id="site_logo">
 		<h1><a href="http://www.lumahealth.io"><img style="margin-top: -45px; margin-left: -45px;" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
 	</div>
-		
+	<!-- dumb IE hack -->
+	<div id="bg">
+	  <img src="./images/clean-and-calm.jpg" alt="">
+	</div>		
 	<!-- <div id="menu_button"><a href="#"></a></div> -->
 
 	<div id="primary" style="padding-right: 15px; padding-left: 15px">
