--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 <body class="style_5" style="padding: 50px">
 	<div id="site_logo">
 		<h1><a href="http://www.lumahealth.io"><img style="margin-top: -45px; margin-left: -45px;" src="images/lumalogo.png" title='Luma Health' alt=""></a></h1>
+
+	</div>
+	<span align="right" style="position: absolute; top: 0; right: 0; padding-right: 10px; padding-top: 10px;"><a href="/login" >Log in</a> <!--| <a href="/signup" >Sign up</a>--></span>
 	</div>
 	<!-- dumb IE hack -->
 	<div id="bg">
@@ -62,7 +65,7 @@
 					<div class="col-xs-12">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px; text-align: center">Interested in learning more?<br>Sign up now and we'll be in touch.</p>
 						<div style="margin-left: auto; margin-right: auto; width: 50%">
-							<form action="signup" style="padding: 22px" class="form-horizontal" method="POST">
+							<form action="moreinfo" style="padding: 22px" class="form-horizontal" method="POST">
 								<div class="form-group">
 									<label for="name" >Name</label>
 									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 60%">
