new qs handling

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 					<div class="col-xs-12">
 						<p style="margin-bottom: 0; padding-top: 22px; font-size: 34px; line-height: 38px; text-align: center">Interested in learning more?<br>Sign up now and we'll be in touch.</p>
 						<div style="margin-left: auto; margin-right: auto; width: 50%">
-							<form action="moreinfo" style="padding: 22px" class="form-horizontal" method="POST">
+							<form style="padding: 22px" class="form-horizontal" method="POST">
 								<div class="form-group">
 									<label for="name" >Name</label>
 									<input class="form-control" required type="text" name="name"/ placeholder="Enter your name" style="width: 60%">
