--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Luma Health - It's About Time</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
 	<link rel="stylesheet" href="css/style.css" type='text/css'>
 	<link rel="stylesheet" href="css/responsive.css" type='text/css'>
