--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,6 @@
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
-
-
             <div class="row">
                 <div class="col-md-8 col-xs-8">
                     <div class="intro-message">
@@ -135,7 +133,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Increase Revenue</h2>
-                    <p class="lead">Luma Health detects cancellations in your appointment book and fills them with your patients, driving drives more patients through your practice. Filled appointments means more revenue.</p>
+                    <p class="lead">Luma Health detects cancellations in your appointment book and fills them with your patients, driving more patients through your practice. Filled appointments means more revenue.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
