--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Improve Productivity</h2>
-                    <p class="lead">By automating the entire cancellation workflow, Luma Health elimates manual phone calls, post-it notes and saves time in the front office. Scheduling staff loves it.</p>
+                    <p class="lead">By automating the entire cancellation workflow, Luma Health eliminates manual phone calls, post-it notes, and saves time in the front office. Scheduling staff love it.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
