--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
                     <p class="lead">By automating the entire cancellation workflow, Luma Health eliminates manual phone calls, post-it notes, and saves time in the front office. Scheduling staff love it.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/phone-call.jpeg" style="-webkit-filter:grayscale(95%); -moz-filter:grayscale(95%)" alt="">
+                    <img class="img-responsive" src="img/phone-call.jpg" style="-webkit-filter:grayscale(95%); -moz-filter:grayscale(95%)" alt="">
                 </div>
             </div>
 
