--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                     <p class="lead">Luma Health detects cancellations in your appointment book and fills them with your patients, driving more patients through your practice. Filled appointments means more revenue.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" style="-webkit-filter:grayscale(95%); -moz-filter:grayscale(95%)" src="img/revenue.png" alt="">
+                    <img class="img-responsive grayout" src="img/revenue.png" alt="">
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
                     <p class="lead">By automating the entire cancellation workflow, Luma Health eliminates manual phone calls, post-it notes, and saves time in the front office. Scheduling staff love it.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/phone-call.jpg" style="-webkit-filter:grayscale(95%); -moz-filter:grayscale(95%)" alt="">
+                    <img class="img-responsive grayout" src="img/phone-call.jpg" alt="">
                 </div>
             </div>
 
@@ -180,7 +180,7 @@
                     <p class="lead">Your patients get to see you sooner, increasing their satisfaction and reducing the chance of lost patients and no-shows. See patients sooner. Healthy patients are happy patients.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/blue-sky.jpg" style="-webkit-filter:grayscale(95%); -moz-filter:grayscale(95%)" alt="">
+                    <img class="img-responsive grayout" src="img/blue-sky.jpg" alt="">
                 </div>
             </div>
 
