--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="/"><img src="img/lumalogo-thin.png" style="height:145%"></a>
+                <a class="navbar-brand topnav" href="/"><img src="images/lumalogo-thin.png" style="height:145%"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,7 +72,7 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-xs-8">
+                <div class="col-md-8">
                     <div class="intro-message">
                         <h1>Luma Health</h1>
                         <h3>Fill cancelled appointments today.</h3>
@@ -82,7 +82,7 @@
 <!--                         <img src="http://cliparts.co/cliparts/kcK/nB8/kcKnB8aGi.png" style="transform:rotateX(180deg) ">
  -->                    </div>
                 </div> <!-- header left -->
-                <div class="col-md-4 col-xs-4">
+                <div class="col-md-4">
                     <form style="padding: 22px; text-align: left; background-color:rgba(192,192,192, 0.7)" class="form-horizontal well" method="POST">
                         <h2>Learn more</h2>
                         <p style="font-weight:normal">Interested in getting a demo or learning more? Let us know and we'll be in touch.</p>
@@ -136,7 +136,7 @@
                     <p class="lead">Luma Health detects cancellations in your appointment book and fills them with your patients, driving more patients through your practice. Filled appointments means more revenue.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive grayout" src="img/revenue.png" alt="">
+                    <img class="img-responsive grayout" src="images/revenue.png" alt="">
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
                     <p class="lead">By automating the entire cancellation workflow, Luma Health eliminates manual phone calls, post-it notes, and saves time in the front office. Scheduling staff love it.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive grayout" src="img/phone-call.jpg" alt="">
+                    <img class="img-responsive grayout" src="images/phone-call.jpg" alt="">
                 </div>
             </div>
 
@@ -180,7 +180,7 @@
                     <p class="lead">Your patients get to see you sooner, increasing their satisfaction and reducing the chance of lost patients and no-shows. See patients sooner. Healthy patients are happy patients.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive grayout" src="img/blue-sky.jpg" alt="">
+                    <img class="img-responsive grayout" src="images/blue-sky.jpg" alt="">
                 </div>
             </div>
 
