--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -59,7 +59,7 @@ window._fbq.push(['track', '6024889145656', {'value':'0.01','currency':'USD'}]);
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="/"><img src="img/lumalogo-thin.png" style="height:145%"></a>
+                <a class="navbar-brand topnav" href="/"><img src="images/lumalogo-thin.png" style="height:145%"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
