google tracking code

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -95,5 +95,23 @@ window._fbq.push(['track', '6024889145656', {'value':'0.01','currency':'USD'}]);
 			</div>
 		</div>
 	</div>
+<!-- Google Code for More Info Submission Conversion Page -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 943165938;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "xAwtCPfv710Q8qPewQM";
+var google_remarketing_only = false;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/943165938/?label=xAwtCPfv710Q8qPewQM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>    
 </body>
 </html>
